--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,10 +15,12 @@
     "bootstrap": "^5.0.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.6",
+    "google-map-react": "^2.1.9",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -51,6 +53,8 @@
     ]
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/react-router-dom": "^5.1.7"
   }
 }
