--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-imask": "^6.0.7",
     "react-input-range": "^1.3.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
