--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,9 @@
     "debug": "export DEBUG=* && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
-    "seed": "npx sequelize-cli db:seed:all"
+    "seed": "npx sequelize-cli db:seed:all",
+    "lint": "eslint .",  
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -43,10 +45,15 @@
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.0",
     "sequelize-cli": "^6.2.0",
     "source-map-support": "^0.5.19",
     "ts-node-dev": "^1.1.6",
-    "tslint": "^6.1.3",
     "typescript": "^4.2.4"
   }
 }
