--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,7 +27,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-text-mask": "^5.4.3",
     "react-toastify": "^7.0.4",
+    "text-mask-addons": "^3.8.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
@@ -61,6 +63,7 @@
     "@types/google-map-react": "^2.1.0",
     "@types/googlemaps": "^3.43.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-text-mask": "^5.4.7",
     "prettier": "^2.3.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
