--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.2.0",
     "react-imask": "^6.0.7",
     "react-input-range": "^1.3.0",
+    "react-paginate": "^7.1.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -62,6 +63,7 @@
   "devDependencies": {
     "@types/google-map-react": "^2.1.0",
     "@types/googlemaps": "^3.43.3",
+    "@types/react-paginate": "^7.1.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-text-mask": "^5.4.7",
     "prettier": "^2.3.0",
