--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
+    "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
+    "datauri": "^3.0.0",
     "debug": "^4.3.1",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
@@ -28,6 +30,7 @@
     "http-status": "^1.5.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -43,6 +46,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/helmet": "^4.0.0",
+    "@types/multer": "^1.4.5",
     "@types/node": "^15.0.2",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
