--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
     "react-imask": "^6.0.7",
     "react-input-range": "^1.3.0",
