--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,7 +16,8 @@
     "classnames": "^2.3.1",
     "formik": "^2.2.6",
     "google-map-react": "^2.1.9",
-    "node-sass": "^5.0.0",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
